Data Filter Dynamic Wipe
Data filtering no longer adds data at bottom of existing table, instead wipes the previous data and replaces the new filtered data in. Accomplished using the .remove function, but was hard to find exactly where to put it and where to aim it.

--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -60,7 +60,7 @@
                   <th class="table-head">Comments</th>
                 </tr>
               </thead>
-              <tbody></tbody>
+              <tbody id="ufo-data"></tbody>
             </table>
           </div>
         </div>
